<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">I  am a button</string>
    <string name="ButtonText">ہیلو </string>
    <string name="widgets">Here are my widgets:</string>
    <string name="btn1">Button</string>
    <string name="checkBox">Check this out!</string>
    <string name="switch1">Switch on / off</string>
    <string name="hint">Type your answer here</string>
    <string name="Splash">Welcome to My First Android Application</string>

    // Lab3 Strings
    <string name="EmailtextView"> Enter Your Email Address: </string>
    <string name="emailHint">Type your email here </string>
    <string name="PasswordTextView">Type your password </string>
    <string name="loginButton">Login</string>


    //ProfitActivity Strings
    <string name="profile">Your Profile</string>
    <string name="nameTextView">Your Name</string>
    <string name="name">Enter Your Name</string>
    <string name="emailTextview">Your Email</string>
    <string name="profileTextView">Your Picture</string>
    <string name="pictureText">click the button above to take a picture</string>

    //Lab4 Strings
    <string name="chatButtonText">Go to Chat</string>
    <string name="lstViewBtnTextSend">SEND</string>
    <string name="lstTextViewHint">Type Here</string>
    <string name="lstViewBtnTextReceive">RECEIVE</string>


    //Lab6 String
    <string name="toolbarBtnText">Go To Toolbar Page</string>


</resources>


