<?xml version="1.0" encoding="UTF-8" ?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >



<TextView
    android:id="@+id/textView"
    android:layout_width ="match_parent"
    android:layout_height ="wrap_content"
    android:layout_alignParentTop="true"
    android:text="@string/widgets"
    android:textSize="35sp" />


<Button
    android:id="@+id/btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/btn1"
    android:layout_below="@id/textView"
    android:textAlignment="center"
    android:layout_alignParentStart="true"
    android:paddingLeft="50dp"
    android:paddingRight="80dp"
    />



<ImageButton
    android:id="@+id/imgBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/canadaflag"
    android:layout_below="@id/textView"
    android:layout_alignParentEnd="true"
    android:layout_toEndOf="@id/btn"
    android:paddingRight="50dp"
    android:paddingLeft="50dp"

    />

<CheckBox
    android:id="@+id/checkbox"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_below="@id/imgBtn"
    android:text="@string/checkBox"
    android:textSize="20sp"

    />

<Switch
    android:id="@+id/switchBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/imgBtn"
    android:layout_alignParentEnd="true"
    android:text="@string/switch1"
    android:textSize="20sp"

    />

<EditText
    android:id="@+id/textEdit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/switchBtn"
    android:hint="@string/hint"
    android:inputType="textPersonName"
    android:importantForAutofill="auto"
    android:textSize="25sp"
    />

</RelativeLayout>