<?xml version="1.0" encoding="utf-8" ?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_weight="1"
    android:layout_gravity="fill_horizontal"
    android:layout_columnWeight="2"
    android:columnCount="2"
    android:rowCount="4"
    >


        <TextView
            android:layout_width ="match_parent"
            android:layout_height ="50dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/widgets"
            android:textSize="40dp">
        </TextView>

<LinearLayout
        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
        <Button
            android:id="@+id/btn"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn1"
            android:gravity="center_horizontal"
            android:textAlignment="center"

            >
        </Button>

        <ImageButton
            android:id="@+id/imgBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/canadaflag"
            android:layout_weight="1"
            />

</LinearLayout>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBox"
            android:layout_columnSpan="2"
            android:layout_row="2"
            android:layout_column="0">
        </CheckBox>

        <Switch
            android:id="@+id/switchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch1"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginLeft="250dp"
            >
        </Switch>


        <EditText
            android:id="@+id/textEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="textPersonName"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="2"

            >
        </EditText>


    </GridLayout>